a few clean ups

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="en">
 
 <head>
-	<title>Legit a Corporate Category Bootstrap Responsive website Template | Home :: w3layouts</title>
+	<title>Mwesigwa Associated Advocates</title>
 	<!-- Meta Tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="Legit Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
+	<meta name="keywords" content="Mwesigwa Associated Advocates, Lawyers, Lawyers Uganda, Lawyers Kampala, Kampala Law" />
 	<script type="application/x-javascript">
 		addEventListener("load", function () {
 			setTimeout(hideURLbar, 0);
@@ -50,12 +49,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h1><a href="index.html" style="font-size: 15px;">MWESIGWA AND CO. ADVOCATES</a></h1>
 					</div>
 					<div class="address">
-						<p>Kampala Rd plot 333</p>
+						<p>Agip House, Plot 9 Kampala Road</p>
 						<p class="para-y"><a href="#contact" class="scroll">Get more info</a></p>
 					</div>
 					<div class="nav-contact-w3ls">
-						<p>+0 111 222 333<span class="fa fa-phone" aria-hidden="true"></span></p>
-						<p class="para-y"><a href="mailto:info@example.com">info@example.com</a><span class="fa fa-envelope-o" aria-hidden="true"></span></p>
+						<p>+256 414-259721<span class="fa fa-phone" aria-hidden="true"></span></p>
+						<p class="para-y"><a href="mailto:mwesiadvocate@utlonline.co.ug">mwesiadvocate@utlonline.co.ug</a><span class="fa fa-envelope-o" aria-hidden="true"></span></p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
@@ -67,7 +66,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="banner-text-w3-agileits">
 				<h5>We Help to Solve</h5>
 				<h2><span>P</span>ersonal and <span>B</span>usiness <span>L</span>aw <span>S</span>olutions</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tortor est, malesuada at nulla in.</p>
+				<p>Provision of excellent and value for money services, by creating client satisfaction, and reward to the Firm.</p>
 				<div class="botton">
 					<a href="#" data-toggle="modal" data-target="#myModal4">Read More</a>
 				</div>
@@ -133,26 +132,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!--about-->
 	<div class="about-main-w3layouts" id="about">
 		<div class="container">
-			<h5 class="title-w3 white-clr">About Us</h5>
+			<h5 class="sub-hdg title-w3">About Us</h5>
 			<div class="sectiona">
 				<div class="about-left">
-					<h5 class="sub-hdg">Now is the time to know about lawyer</h5>
-					<p class="para-w3-agile">Ut in ligula sollicitudin, auctor elit vel, mollis tortor. Nullam id magna in eros mollis porttitor vel et eros.Phasellus
-						sed iaculis nibh, non suscipit tortor. Aenean ante massa, lobortis et dolor eget, sollicitudin luctus arcu. Donec eros
-						tortor, ultrices in lectus quis, aliquet commodo lectus. </p>
+					<!-- <h5 class="sub-hdg">Now is the time to know about lawyer</h5> -->
+					<p class="para-w3-agile">Mwesigwa Associated Advocates is a full-service commercial law firm covering all
+areas of corporate and commercial practice, with expertise in banking and finance,
+insurance, commercial transactions, revenue law and taxation, litigation, alternative
+dispute resolution, land transactions and conveyances. It also has advocates with a
+wealth of knowledge in civil, criminal procedures, intellectual property law, labour laws
+and immigrations laws.</p>
 					<div class="about-sub">
 						<div class="about-left1">
 
-							<h5 class="sub-hdg">Our Law Chamber <span class="fa fa-gavel" aria-hidden="true"></span></h5>
-							<p class="para-w3-agile">Phasellus sed iaculis nibh, non suscipit tortor. Aenean ante massa, lobortis et dolor eget, sollicitudin luctus arcu.
-								Donec eros tortor, ultrices in lectus quis, aliquet commodo lectus. </p>
+							<h5 class="sub-hdg">Our Mission <span class="fa fa-gavel" aria-hidden="true"></span></h5>
+							<p class="para-w3-agile">Provision of excellent and value for money services, by creating client satisfaction, and reward to the Firm.</p>
 						</div>
 						<div class="about-left2">
-							<h5 class="sub-hdg">We are Here <span class="fa fa-clock-o" aria-hidden="true"></span></h5>
-							<p class="para-w3-agile">Phasellus sed iaculis nibh, non suscipit tortor. Aenean ante massa.</p>
-							<p class="para-w3-agile">Working days <span class="time">9am - 5pm</span></p>
-							<p class="para-w3-agile">Holidays <span class="time">10am - 2pm</span></p>
-							<p class="para-w3-agile">Sundays <span class="time">9am - 1pm</span></p>
+							<h5 class="sub-hdg">Our Vision <span class="fa fa-clock-o" aria-hidden="true"></span></h5>
+							<p class="para-w3-agile">To be one of the leading law firms in Uganda providing practical legal solutions with a professional mind.</p>
 						</div>
 					</div>
 				</div>
@@ -260,36 +258,32 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="area-img1">
 					</div>
 					<div class="area-right p1">
-						<h5>Business Law</h5>
-						<p class="para-w3-agile">Phasellus sed iaculis nibh, non suscipit tortor. Aenean ante massa, lobortis et dolor eget, sollicitudin luctus arcu.
-							Donec eros tortor, ultrices in lectus quis, aliquet commodo lectus.</p>
+						<h5>Corporate & Commercial Law</h5>
+						<p class="para-w3-agile">The firm provides corporate and commercial legal services to local and international businesses. The firm drafts documents and negotiates sophisticated commercial transactions.</p>
 					</div>
 				</div>
 				<div class="col-md-6 area-inner">
 					<div class="area-img2">
 					</div>
 					<div class="area-right p2">
-						<h5>Political Law</h5>
-						<p class="para-w3-agile">Phasellus sed iaculis nibh, non suscipit tortor. Aenean ante massa, lobortis et dolor eget, sollicitudin luctus arcu.
-							Donec eros tortor, ultrices in lectus quis, aliquet commodo lectus.</p>
+						<h5>Intellectual Property Law</h5>
+						<p class="para-w3-agile">The firm handles all aspects of intellectual property rights management and enforcement and provides services to a cross-section of international and national corporate clients.</p>
 					</div>
 				</div>
 			</div>
 			<div class="area-main">
 				<div class="col-md-6 area-inner">
 					<div class="area-right p3">
-						<h5>Financial Law</h5>
-						<p class="para-w3-agile">Phasellus sed iaculis nibh, non suscipit tortor. Aenean ante massa, lobortis et dolor eget, sollicitudin luctus arcu.
-							Donec eros tortor, ultrices in lectus quis, aliquet commodo lectus.</p>
+						<h5>Land Transactions/Real Estate</h5>
+						<p class="para-w3-agile">The firm handles land matters for several clients both international and local. The work includes registration of leases, transfers, mortgages, etc General property management, General negotiation of sale of properties & Land among others.</p>
 					</div>
 					<div class="area-img3">
 					</div>
 				</div>
 				<div class="col-md-6 area-inner">
 					<div class="area-right p4">
-						<h5>Corporate Law</h5>
-						<p class="para-w3-agile">Phasellus sed iaculis nibh, non suscipit tortor. Aenean ante massa, lobortis et dolor eget, sollicitudin luctus arcu.
-							Donec eros tortor, ultrices in lectus quis, aliquet commodo lectus.</p>
+						<h5>Others</h5>
+						<p class="para-w3-agile">Other practicle areas include Revenue Law and Taxation, Employment Law, Secretarial matters, Immigration, Civil and Commercial Litigation, Advocacy, Litigation and Arbitration, etc.</p>
 					</div>
 					<div class="area-img4">
 					</div>
@@ -304,10 +298,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!-- Owl-Carousel -->
 			<div class=" col-md-4 clients-left">
 				<h5 class="title-w3">Clients feedback</h5>
-				<p class="para-w3-agile">Duis nulla nulla, faucibus id diam ac, luctus sodales purus.</p>
-				<div class="botton">
-					<a href="#" data-toggle="modal" data-target="#myModal4">Read More</a>
-				</div>
+				<p class="para-w3-agile">What our clients are saying about uss.</p>
+				
 				<div class="clearfix"> </div>
 			</div>
 			<div id="owl-demo" class="col-md-8 owl-carousel text-center clients-right">
@@ -401,7 +393,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</form>
 			</div>
 			<div class="map-w3-agileits">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3130.383785592421!2d146.42522801540605!3d-38.316942579664385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b296d2ac302b481%3A0x93b0bd26683fdaac!2sNorthways+Rd%2C+Churchill+VIC+3842%2C+Australia!5e0!3m2!1sen!2sin!4v1509620043650"></iframe>
+				<iframe src="https://maps.google.com/maps?q=Agip%20House&t=&z=15&ie=UTF8&iwloc=&output=embed"></iframe>
 			</div>
 		</div>
 	</div>
@@ -411,19 +403,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="col-sm-4 w3ls_footer_grid_left">
 				<h5 class="sub-hdg">Address</h5>
-				<p>Northways Rd Churchill VIC <span>3842 Australia.</span></p>
+				<p>Suite 27 2nd Floor Agip House <span>Plot No. 9 Kampala Road</span> <span>PO Box 10924</span> <span>Kampala, Uganda.</span></p>
 			</div>
 			<div class="col-sm-4 w3ls_footer_grid_left">
 				<h5 class="sub-hdg">Contact Us</h5>
-				<p>+(012) 345 6789 <span>+(012) 678 3459</span></p>
+				<p>+256 414-259721</p>
 			</div>
 			<div class="col-sm-4 w3ls_footer_grid_left">
 				<h5 class="sub-hdg">Mail Us</h5>
-				<p><a href="mailto:info@example.com">info@example1.com</a>
-					<span><a href="mailto:info@example.com">info@example2.com</a></span></p>
+				<p><a href="mailto:mwesiadvocate@utlonline.co.ug">mwesiadvocate@utlonline.co.ug</a></p>
 			</div>
 			<div class="clearfix"> </div>
-			<h6 class="footer-logo"><a href="index.html"><span class="fa fa-balance-scale" aria-hidden="true"></span> Legit</a></h6>
+			<h6 class="footer-logo"><a href="index.html"><span class="fa fa-balance-scale" aria-hidden="true"></span> MAA</a></h6>
 			<div class="w3l-social">
 				<ul>
 					<li><a href="#" class="fa fa-facebook"></a></li>
@@ -439,7 +430,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 	<div class="copyright-wthree">
 		<div class="container">
-			<p>&copy; 2017 Legit . All Rights Reserved | Design by <a href="http://w3layouts.com/"> W3layouts </a></p>
+			<p>&copy; 2018 Mwesigwa Associated Advocates . All Rights Reserved | Design and built by <a href="http://webservices.zonaster.com/"> ZWS </a></p>
 		</div>
 	</div>
 	<!-- //Footer -->
