--- a/index.html
+++ b/index.html
@@ -67,9 +67,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<h5>We Help to Solve</h5>
 				<h2><span>P</span>ersonal and <span>B</span>usiness <span>L</span>aw <span>S</span>olutions</h2>
 				<p>Provision of excellent and value for money services, by creating client satisfaction, and reward to the Firm.</p>
-				<div class="botton">
-					<a href="#" data-toggle="modal" data-target="#myModal4">Read More</a>
-				</div>
 
 			</div>
 		</div>
@@ -211,25 +208,24 @@ and immigrations laws.</p>
 				<div class="col-md-4 col-sm-4 col-xs-12 blog-gd-w3ls">
 					<img src="images/team1.jpg" alt="blog-image">
 					<div class="date-w3">
-						<h4>Michael King</h4>
-						<p class="para-w3-agile">Phasellus sed iaculis</p>
-						<a href="mailto:example@mail.com">mail@example.com</a>
+						<h4>Caleb Mwesigwa</h4>
+						<p class="para-w3-agile">Holds an LL.B (Hons) of Makerere University and a Diploma in Legal Practice of the Law Development Centre. He is a Member of the Uganda Law Society and East African Law Society ,and the founding and current Managing Partner of the Firm</p>
+						<a href="mailto:example@mail.com">calebmwesigwa@yahoo.co.uk</a>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 col-xs-12 blog-gd-w3ls">
 					<img src="images/team2.jpg" alt="blog-image">
 					<div class="date-w3">
-						<h4>Katherin Tresa</h4>
-						<p class="para-w3-agile">Phasellus sed iaculis</p>
-						<a href="mailto:example@mail.com">mail@example.com</a>
+						<h4>Richard Mwebaze</h4>
+						<p class="para-w3-agile">Holds an LLB (Hons) Degree of Makerere University and a Diploma in Legal Practice (Law Development Centre). A Member Uganda Law Society, Member East African law Society, Advocate of the High Court and all Courts subordinate thereto.</p>
+						<a href="tel:+256772185956">Mob: +256772185956</a>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 col-xs-12 blog-gd-w3ls last">
 					<img src="images/team3.jpg" alt="blog-image">
 					<div class="date-w3">
-						<h4>Steven Monroe</h4>
-						<p class="para-w3-agile">Phasellus sed iaculis</p>
-						<a href="mailto:example@mail.com">mail@example.com</a>
+						<h4>Taremwa Bruce (Law Clerk)</h4>
+						<p class="para-w3-agile">Holds a Diploma in Law from the Law Development Centre and is currently pursuing a Bachelor of Laws Degree from Makerere University.</p>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
@@ -430,7 +426,7 @@ and immigrations laws.</p>
 	</div>
 	<div class="copyright-wthree">
 		<div class="container">
-			<p>&copy; 2018 Mwesigwa Associated Advocates . All Rights Reserved | Design and built by <a href="http://webservices.zonaster.com/"> ZWS </a></p>
+			<p>&copy; 2018 Mwesigwa Associated Advocates . All Rights Reserved | Design and developed by <a href="http://webservices.zonaster.com/"> ZWS </a></p>
 		</div>
 	</div>
 	<!-- //Footer -->
