--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<p class="para-y"><a href="#contact" class="scroll">Get more info</a></p>
 					</div>
 					<div class="nav-contact-w3ls">
-						<p>+256 414-259721<span class="fa fa-phone" aria-hidden="true"></span></p>
+						<p><a href="tel:+256414259721" style="color: #ffcc54">+256 414-259721</a><span class="fa fa-phone" aria-hidden="true"></span></p>
 						<p class="para-y"><a href="mailto:mwesiadvocate@utlonline.co.ug">mwesiadvocate@utlonline.co.ug</a><span class="fa fa-envelope-o" aria-hidden="true"></span></p>
 					</div>
 					<div class="clearfix"></div>
@@ -403,7 +403,7 @@ and immigrations laws.</p>
 			</div>
 			<div class="col-sm-4 w3ls_footer_grid_left">
 				<h5 class="sub-hdg">Contact Us</h5>
-				<p>+256 414-259721</p>
+				<p><a href="tel:+256414259721">+256 414-259721</a></p>
 			</div>
 			<div class="col-sm-4 w3ls_footer_grid_left">
 				<h5 class="sub-hdg">Mail Us</h5>
