made some clear changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="container">
 				<div class="header-bottom-agileits">
 					<div class="w3-logo">
-						<h1><a href="index.html" style="font-size: 15px;">MWESIGWA AND CO. ADVOCATES</a></h1>
+						<h1><a href="index.html" style="font-size: 15px; text-align: center; margin-left: -50px;">MWESIGWA ASSOCIATED ADVOCATES</a></h1>
 					</div>
 					<div class="address">
 						<p>Agip House, Plot 9 Kampala Road</p>
@@ -159,7 +159,7 @@ and immigrations laws.</p>
 						</div>
 						<div class="inner_w3l_agile_grids">
 							<div class="w3layouts_stats_left w3_counter_grid">
-								<p class="counter">1,546</p>
+								<p>143</p>
 								<div class="stats-rt-agileinfo">
 									<span class="fa fa-gavel" aria-hidden="true"></span>
 									<h3>Cases</h3>
@@ -167,7 +167,7 @@ and immigrations laws.</p>
 								<div class="clearfix"> </div>
 							</div>
 							<div class="w3layouts_stats_left w3_counter_grid1">
-								<p class="counter">287</p>
+								<p>21</p>
 								<div class="stats-rt-agileinfo">
 									<span class="fa fa-users" aria-hidden="true"></span>
 									<h3>Lawyers</h3>
@@ -175,7 +175,7 @@ and immigrations laws.</p>
 								<div class="clearfix"> </div>
 							</div>
 							<div class="w3layouts_stats_left w3_counter_grid2">
-								<p class="counter">2879</p>
+								<p>23</p>
 								<div class="stats-rt-agileinfo">
 									<span class="fa fa-thumbs-o-up" aria-hidden="true"></span>
 									<h3>Satisfied Clients</h3>
@@ -183,7 +183,7 @@ and immigrations laws.</p>
 								<div class="clearfix"> </div>
 							</div>
 							<div class="w3layouts_stats_left w3_counter_grid3">
-								<p class="counter">150</p>
+								<p>5</p>
 								<div class="stats-rt-agileinfo">
 									<span class="fa fa-shield" aria-hidden="true"></span>
 									<h3>Awards Won</h3>
@@ -426,7 +426,7 @@ and immigrations laws.</p>
 	</div>
 	<div class="copyright-wthree">
 		<div class="container">
-			<p>&copy; 2018 Mwesigwa Associated Advocates . All Rights Reserved | Design and developed by <a href="http://webservices.zonaster.com/"> ZWS </a></p>
+			<p>&copy; 2018 Mwesigwa Associated Advocates . All Rights Reserved | Design and developed by <span><a href="http://webservices.zonaster.com/" style="text-decoration: none;"> Zonaster Web Services </a></span></p>
 		</div>
 	</div>
 	<!-- //Footer -->
