some more clearings

--- a/index.html
+++ b/index.html
@@ -251,15 +251,24 @@ and immigrations laws.</p>
 			<h5 class="title-w3">Practice Areas</h5>
 			<div class="area-main">
 				<div class="col-md-6 area-inner">
-					<div class="area-img1">
-					</div>
-					<div class="area-right p1">
+					<div class="area-right p1" style="background-color: #26A69A;">
 						<h5>Corporate & Commercial Law</h5>
 						<p class="para-w3-agile">The firm provides corporate and commercial legal services to local and international businesses. The firm drafts documents and negotiates sophisticated commercial transactions.</p>
 					</div>
+					<div class="area-right p1">
+						<h5>Employment Law</h5>
+						<p class="para-w3-agile">We have the capacity to provide advisory services, prepare
+documentation and represent your best interests in all employment and labour related
+matters. We can also advise you on labour and employment matters of your clients to
+whom you provide Worker’s Compensation covers.</p>
+					</div>
 				</div>
 				<div class="col-md-6 area-inner">
-					<div class="area-img2">
+					<div class="area-right p1" style="background-color: #303F9F;">
+						<h5>Immigration</h5>
+						<p class="para-w3-agile">We can efficiently and effectively handle your immigration matters,
+particularly for foreign employees and their relations. We can handle matters relating to
+Procurement and renewal of work permits; procurement of Pupil and student Passes, among others.</p>
 					</div>
 					<div class="area-right p2">
 						<h5>Intellectual Property Law</h5>
@@ -273,15 +282,22 @@ and immigrations laws.</p>
 						<h5>Land Transactions/Real Estate</h5>
 						<p class="para-w3-agile">The firm handles land matters for several clients both international and local. The work includes registration of leases, transfers, mortgages, etc General property management, General negotiation of sale of properties & Land among others.</p>
 					</div>
-					<div class="area-img3">
+					<div class="area-right p1" style="background-color: #4CAF50;">
+						<h5>Secretarial matters</h5>
+						<p class="para-w3-agile">We can handle all your secretarial matters relating to preparation
+of minutes, preparation and filing of resolutions, annual returns and all aspects of your
+statutory compliance.</p>
 					</div>
 				</div>
 				<div class="col-md-6 area-inner">
+					<div class="area-right p1" style="background-color: #7B1FA2;">
+						<h5>Revenue Law and Taxation</h5>
+						<p class="para-w3-agile">We can advise you on a broad range of issues of
+revenue law and taxation in Uganda.</p>
+					</div>
 					<div class="area-right p4">
 						<h5>Others</h5>
-						<p class="para-w3-agile">Other practicle areas include Revenue Law and Taxation, Employment Law, Secretarial matters, Immigration, Civil and Commercial Litigation, Advocacy, Litigation and Arbitration, etc.</p>
-					</div>
-					<div class="area-img4">
+						<p class="para-w3-agile">Other practicle areas include Civil and Commercial Litigation, Advocacy, Litigation and Arbitration, among others.</p>
 					</div>
 				</div>
 			</div>
