--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="container">
 				<div class="header-bottom-agileits">
 					<div class="w3-logo">
-						<h1><a href="index.html" style="font-size: 15px; text-align: center; margin-left: -50px;">MWESIGWA ASSOCIATED ADVOCATES</a></h1>
+						<h1><a href="index.html" style="font-size: 14px;">MWESIGWA ASSOCIATED ADVOCATES</a></h1>
 					</div>
 					<div class="address">
 						<p>Agip House, Plot 9 Kampala Road</p>
