changed index file

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<h1><a href="index.html" style="font-size: 14px;">MWESIGWA ASSOCIATED ADVOCATES</a></h1>
 					</div>
 					<div class="address">
-						<p>Agip House, Plot 9 Kampala Road</p>
+						<p>Suite 27 2nd Floor Agip House, Plot 9 Kampala Road</p>
+						<p style="font-size: 11px;"> P.O Box 12536 </p>
 						<p class="para-y"><a href="#contact" class="scroll">Get more info</a></p>
 					</div>
 					<div class="nav-contact-w3ls">
@@ -66,7 +67,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="banner-text-w3-agileits">
 				<h5>We Help to Solve</h5>
 				<h2><span>P</span>ersonal and <span>B</span>usiness <span>L</span>aw <span>S</span>olutions</h2>
-				<p>Provision of excellent and value for money services, by creating client satisfaction, and reward to the Firm.</p>
+				<p>Advocates, Legal Practitioners, Solicitors, Commercial Trade & Investment, Land & Real Estate Consultants & Angents, Licensing Agents, Legal Consultants & Attorneys at Law.</p>
 
 			</div>
 		</div>
