added counsel images

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h5 class="title-w3">Meet Our Attorneys</h5>
 			<div class="inst-grids">
 				<div class="col-md-4 col-sm-4 col-xs-12 blog-gd-w3ls">
-					<img src="images/team1.jpg" alt="blog-image">
+					<img src="https://res.cloudinary.com/zonaster/image/upload/v1536220698/websites/IMG-20180905-WA0007.jpg" alt="blog-image">
 					<div class="date-w3">
 						<h4>Michael King</h4>
 						<p class="para-w3-agile">Phasellus sed iaculis</p>
@@ -219,7 +219,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 col-xs-12 blog-gd-w3ls">
-					<img src="images/team2.jpg" alt="blog-image">
+					<img src="https://res.cloudinary.com/zonaster/image/upload/v1536220697/websites/IMG-20180905-WA0006.jpg" alt="blog-image">
 					<div class="date-w3">
 						<h4>Katherin Tresa</h4>
 						<p class="para-w3-agile">Phasellus sed iaculis</p>
@@ -227,7 +227,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 col-xs-12 blog-gd-w3ls last">
-					<img src="images/team3.jpg" alt="blog-image">
+					<img src="https://res.cloudinary.com/zonaster/image/upload/v1536220697/websites/IMG-20180905-WA0004.jpg" alt="blog-image">
 					<div class="date-w3">
 						<h4>Steven Monroe</h4>
 						<p class="para-w3-agile">Phasellus sed iaculis</p>
