--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ and immigrations laws.</p>
 			<h5 class="title-w3">Meet Our Attorneys</h5>
 			<div class="inst-grids">
 				<div class="col-md-4 col-sm-4 col-xs-12 blog-gd-w3ls">
-					<img src="https://res.cloudinary.com/zonaster/image/upload/v1536220698/websites/IMG-20180905-WA0007.jpg" alt="blog-image">
+					<img style="height: 250px;" src="https://res.cloudinary.com/zonaster/image/upload/v1536220698/websites/IMG-20180905-WA0007.jpg" alt="blog-image">
 					<div class="date-w3">
 						<h4>Caleb Mwesigwa</h4>
 						<p class="para-w3-agile">Holds an LL.B (Hons) of Makerere University and a Diploma in Legal Practice of the Law Development Centre. He is a Member of the Uganda Law Society and East African Law Society ,and the founding and current Managing Partner of the Firm</p>
@@ -215,7 +215,7 @@ and immigrations laws.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 col-xs-12 blog-gd-w3ls">
-					<img src="https://res.cloudinary.com/zonaster/image/upload/v1536220697/websites/IMG-20180905-WA0004.jpg" alt="blog-image">
+					<img style="height: 250px;" src="https://res.cloudinary.com/zonaster/image/upload/v1536220697/websites/IMG-20180905-WA0004.jpg" alt="blog-image">
 					<div class="date-w3">
 						<h4>Richard Mwebaze</h4>
 						<p class="para-w3-agile">Holds an LLB (Hons) Degree of Makerere University and a Diploma in Legal Practice (Law Development Centre). A Member Uganda Law Society, Member East African law Society, Advocate of the High Court and all Courts subordinate thereto.</p>
@@ -223,7 +223,7 @@ and immigrations laws.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 col-xs-12 blog-gd-w3ls last">
-					<img src="https://res.cloudinary.com/zonaster/image/upload/v1536220697/websites/IMG-20180905-WA0006.jpg" alt="blog-image">
+					<img style="height: 250px;" src="https://res.cloudinary.com/zonaster/image/upload/v1536220697/websites/IMG-20180905-WA0006.jpg" alt="blog-image">
 					<div class="date-w3">
 						<h4>Taremwa Bruce (Law Clerk)</h4>
 						<p class="para-w3-agile">Holds a Diploma in Law from the Law Development Centre and is currently pursuing a Bachelor of Laws Degree from Makerere University.</p>
